@@ -1,3 +1,8 @@
+2000-02-20  Derek Price  <derek.price@openavenue.com>
+
+	* client.c: Use xgssapi.h.
+	* server.c: Ditto.
+
 2000-02-15  Derek Price  <derek.price@openavenue.com>
 
 	* Makefile.am (cvs_SOURCES): Correct error from yesterday.
